@@ -355,11 +355,11 @@ public class TesterOpenSSL {
         InputStreamToText stdout = new InputStreamToText(p.getInputStream());
         InputStreamToText stderr = new InputStreamToText(p.getErrorStream());
 
-        Thread t1 = new Thread(stdout);
+        Thread t1  = Thread.ofVirtual().unstarted(stdout);
         t1.setName("OpenSSL stdout reader");
         t1.start();
 
-        Thread t2 = new Thread(stderr);
+        Thread t2  = Thread.ofVirtual().unstarted(stderr);
         t2.setName("OpenSSL stderr reader");
         t2.start();
 
